location map overflow fix2

--- a/css/magokbd.css
+++ b/css/magokbd.css
@@ -338,6 +338,7 @@ main {
   padding-bottom:10px;
   box-sizing: border-box; 
   background-color:white;
+  overflow:hidden;
 
 }
 
